...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Counter value: 1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decrementCounterButton"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/incrementCounterButton"
        app:layout_constraintTop_toBottomOf="@id/counterTextView"
        android:layout_marginTop="48dp"
        android:text="@string/decrement"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="24dp"
        android:minWidth="144dp"/>
...
