<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.imbactbulletz.robotpattern.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_LoginFragment_to_dashboardFragment"
            app:destination="@id/DashboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/DashboardFragment"
        android:name="com.imbactbulletz.robotpattern.dashboard.DashboardFragment"
        android:label="DashboardFragment" />
</navigation>